--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -90,6 +90,7 @@
                                                 <input type="hidden" name="title" id="title" value={{ title }} >
                                                 <input type="hidden" name="price" id="price" value= {{ price }}>
                                                 <input type="hidden" name="unit" id="unit"  value={{ unit }}>
+                                                <input type="hidden" name="img" id="img"  value={{ img }}>
                                                 <button type="submit" class="mercadopago-button" formmethod="post">Comprar</button>
                             </form>
                         </div>
